@@ -1322,7 +1322,7 @@ FixedData=ff 00 ff 00 ff 00 ff 00
 CmdTranslator=Translator(lsb,comp,0,8,0) Translator(1,2,8) Translator(2,1,11,1) Translator(2,1,15)
 CmdParms=OBC:8=0,Dev.Sub:0|1|2|3,Style :NEC1|NEC2|NECx1|NECx2=0
 CmdParmInit=PickInitializer(1,N0.1,N2.3,N4.5,N6.7)
-ImportCmdTranslator=Translator(0,2,8,0,-1) NECStyleImporter(1)
+ImportCmdTranslator=Translator(0,1,8,0,-1) NECStyleImporter(1)
 DefaultCmd=00 20
 CmdIndex=0
 Notes=There are primarily 2 versions of the NEC protocol: NEC1 and NEC2. The difference between the two is in how the codes repeat when a button is held down. Even if you use the wrong version, it will probably still work, except that the codes won't repeat (or vice versa).\n\n\
